I forgot to add contact h3 in footer, so i just added it

--- a/04_Challenges/cv-styling-master/public/style1/style.css
+++ b/04_Challenges/cv-styling-master/public/style1/style.css
@@ -208,6 +208,9 @@ opacity: 100;
         figure{
             margin-left: 0px;
         }
+        #contact > h3{
+            display: block;
+         }
     
 }
 
